[gd_scene load_steps=18 format=3 uid="uid://e1vycbb1kxw5"]

[ext_resource type="Script" uid="uid://cbrwhffeeetn3" path="res://sprites/Main.gd" id="1_wrl6d"]
[ext_resource type="FontFile" uid="uid://bu1iyi0liu3ed" path="res://fonts/RobotoCondensed-Regular.ttf" id="2_ehl27"]
[ext_resource type="Script" uid="uid://w64i317bdonr" path="res://sprites/ItemListDrag.gd" id="3_esx0d"]
[ext_resource type="Script" uid="uid://cg6plkyshfe2w" path="res://sprites/BuildArea.gd" id="4_pw5wm"]
[ext_resource type="Texture2D" uid="uid://cvbgdeguds1i8" path="res://sprites/base.png" id="4_w7shj"]
[ext_resource type="Script" uid="uid://efgr5koyjd5b" path="res://sprites/Camera.gd" id="6_tc3gk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ehl27"]
bg_color = Color(0.881937, 0.881937, 0.881937, 1)
border_width_top = 2
border_color = Color(0.521569, 0.521569, 0.521569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w7shj"]
content_margin_left = 13.0
content_margin_top = 10.0
content_margin_right = 13.0
content_margin_bottom = 10.0
bg_color = Color(1, 0.619608, 0.564706, 0.258824)
border_color = Color(1, 0.619608, 0.564706, 0.290196)

[sub_resource type="Theme" id="Theme_esx0d"]
TabContainer/colors/font_selected_color = Color(0, 0, 0, 1)
TabContainer/styles/panel = SubResource("StyleBoxFlat_ehl27")
TabContainer/styles/tab_selected = SubResource("StyleBoxFlat_w7shj")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ehl27"]

[sub_resource type="Theme" id="Theme_pw5wm"]
ItemList/styles/panel = SubResource("StyleBoxLine_ehl27")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_esx0d"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_w7shj"]

[sub_resource type="Theme" id="Theme_tc3gk"]
ItemList/styles/panel = SubResource("StyleBoxLine_w7shj")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pw5wm"]
draw_center = false
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tc3gk"]
bg_color = Color(1, 1, 1, 0.905882)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t422m"]

[node name="Root" type="Node2D"]
script = ExtResource("1_wrl6d")

[node name="Tabs" type="TabContainer" parent="."]
offset_left = -440.0
offset_top = 121.0
offset_right = -39.0
offset_bottom = 900.0
theme = SubResource("Theme_esx0d")
theme_override_constants/outline_size = 0
theme_override_constants/side_margin = 0
theme_override_fonts/font = ExtResource("2_ehl27")
theme_override_font_sizes/font_size = 16
current_tab = 0

[node name="Одностенные" type="ItemList" parent="Tabs"]
layout_mode = 2
theme = SubResource("Theme_pw5wm")
theme_override_constants/v_separation = 40
theme_override_constants/h_separation = 40
theme_override_styles/panel = SubResource("StyleBoxFlat_esx0d")
allow_reselect = true
item_count = 1
max_columns = 3
same_column_width = true
fixed_icon_size = Vector2i(80, 80)
script = ExtResource("3_esx0d")
metadata/_tab_index = 0

[node name="Утепленные" type="ItemList" parent="Tabs"]
visible = false
layout_mode = 2
theme = SubResource("Theme_tc3gk")
theme_override_constants/v_separation = 40
theme_override_constants/h_separation = 40
theme_override_styles/panel = SubResource("StyleBoxFlat_pw5wm")
allow_reselect = true
max_columns = 3
same_column_width = true
fixed_icon_size = Vector2i(80, 80)
script = ExtResource("3_esx0d")
metadata/_tab_index = 1

[node name="Комплектующие" type="ItemList" parent="Tabs"]
visible = false
layout_mode = 2
theme = SubResource("Theme_tc3gk")
theme_override_constants/v_separation = 40
theme_override_constants/h_separation = 40
theme_override_styles/panel = SubResource("StyleBoxFlat_pw5wm")
allow_reselect = true
max_columns = 3
same_column_width = true
fixed_icon_size = Vector2i(80, 80)
script = ExtResource("3_esx0d")
metadata/_tab_index = 2

[node name="DisplaySprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.1, 0.1)

[node name="BuildAreaBackground" type="ColorRect" parent="."]
z_index = -1
custom_minimum_size = Vector2(1266, 851)
offset_left = 7.0
offset_top = 50.0
offset_right = 1273.0
offset_bottom = 901.0
mouse_filter = 2
color = Color(1, 1, 0.988235, 1)

[node name="FurnaceSprite" type="Sprite2D" parent="BuildAreaBackground"]
z_index = 6
position = Vector2(649, 671)
texture = ExtResource("4_w7shj")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(413, 448)
script = ExtResource("6_tc3gk")

[node name="BuildArea" type="Panel" parent="."]
z_index = 4
custom_minimum_size = Vector2(1264, 851)
offset_left = 7.0
offset_top = 50.0
offset_right = 1271.0
offset_bottom = 901.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tc3gk")
script = ExtResource("4_pw5wm")

[node name="SphereOptionButton" type="OptionButton" parent="."]
offset_left = -426.0
offset_top = 20.0
offset_right = -146.0
offset_bottom = 51.0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ehl27")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_t422m")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(1, 0)
offset_left = -429.0
offset_top = -17.0
offset_right = -156.0
offset_bottom = 13.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("2_ehl27")
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
text = "Выбери сферу применения"

[node name="SingleSeriesOptionButton" type="OptionButton" parent="."]
offset_left = -427.0
offset_top = 65.0
offset_right = -303.0
offset_bottom = 89.0
mouse_filter = 1

[node name="SandvichSeriesOptionButton" type="OptionButton" parent="."]
offset_left = -276.0
offset_top = 63.0
offset_right = -163.0
offset_bottom = 88.0
mouse_filter = 1

[node name="AccessoriesSeriesOptionButton" type="OptionButton" parent="."]
visible = false
offset_left = -146.0
offset_top = 68.0
offset_right = -31.0
offset_bottom = 88.0
mouse_filter = 1

[node name="DiameterOptionButton" type="OptionButton" parent="."]
offset_left = -127.0
offset_top = 21.0
offset_right = -51.0
offset_bottom = 48.0
mouse_filter = 1

[node name="ControlPanel" type="Panel" parent="."]
offset_left = 557.0
offset_top = 50.0
offset_right = 757.0
offset_bottom = 150.0

[node name="RotateButton" type="Button" parent="ControlPanel"]
z_index = 10
layout_mode = 0
offset_left = 13.0
offset_top = 18.0
offset_right = 88.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("2_ehl27")
theme_override_font_sizes/font_size = 18
text = "Rotate"

[node name="DeleteButton" type="Button" parent="ControlPanel"]
z_index = 10
layout_mode = 0
offset_left = 98.0
offset_top = 19.0
offset_right = 182.0
offset_bottom = 52.0
theme_override_fonts/font = ExtResource("2_ehl27")
theme_override_font_sizes/font_size = 18
text = "Delete"

[node name="CostPanel" type="VBoxContainer" parent="."]
z_index = 2
offset_left = 1125.0
offset_top = -6.0
offset_right = 1615.0
offset_bottom = 437.0
